--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -11,4 +11,10 @@ jobs:
       with:
         url: https://webmention.app/check?url={{EntryUrl}}&token=6ed2d3cd-8531-474b-987c-3c47d35efc87
         method: 'POST'
+        body: |
+            {
+              "link":"${{ on.rss.outputs.link }}", 
+              "title": "${{ on.rss.outputs.title }}",
+              "content":"<<<${{ on.rss.outputs.contentSnippet }}>>>"
+            }
         
