--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -1,2 +1,16 @@
-
+on:
+        rss:
+                url: https://astralsea.bearblog.dev/feed/?type=rss
+jobs:
+        jobs:
+  send_webmentions:
+    name: Send webmentions
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Send webmentions for RSS item link'
+        uses: actionsflow/axios@v1
+        with:
+          url: https://webmention.app/check/
+          method: 'POST'
+          params: '{ "url": "${{on.rss.outputs.link}}", "token": "${{ secrets.WM_TOKEN }}" }'
         
